# manga-overlay

./: .gitignore  Cargo.toml  README.md  build.rs
config/: log4rs.yaml
src/: action.rs  lib.rs  main.rs
src/database/: history_data.rs  kanji_statistic.rs  mod.rs  table.rs
src/detect/: comictextdetector.rs  mod.rs  session_builder.rs
src/event/: event.rs
src/jpn/: dict.rs  kanji.rs  mod.rs
src/ocr/: easy_ocr.rs  manga_ocr.rs  mod.rs  ocr.py  run.py  tesseract.rs
src/translation/: google.rs
src/ui/: app.rs  background_rect.rs  channel_value.rs  event.rs  id_item.rs  image_display.rs  kanji_history_ui.rs  kanji_statistic_ui.rs  mod.rs  mouse_hover.rs  ocr_rect.rs  pipeline_config.rs  screenshot_result_ui.rs  settings.rs  shortcut.rs  show_ui.rs  shutdown.rs  update_queue.rs
