[package]
name = "egui_ocr"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies.pyo3]
version = "0.23.4"
features = ["auto-initialize"]

[dependencies]
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.    # To support Linux (and CI)
] }
egui = "0.31.0"
egui_extras = "0.31.0"
enigo = "0.3.0"
log = "0.4"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive", "rc"] }


serde_json = "1.0"
rusty-tesseract = "1.1.9"
screenshots = "0.8.10"
anyhow = "1.0.80"
jmdict = "2.0.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
futures = "0.3.28"
itertools = "0.12.1"
multimap = "0.10.0"
serde_with = "3.3.0"
strum = { version = "0.26.1", features = ["derive"] }
regex = "1.10.0"
scraper = "0.19.0"
reqwest = "0.11.23"
ort = { version = "2.0.0-alpha.9", features = ["cuda"] }
ndarray = "0.16.1"
image = "0.25.5"
imageproc = "0.25.0"
log4rs = "1.3.0"
open = "5.3.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }




[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2



[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
winres = "0.1.12"
